# VisuConference

./: .gitignore  Cargo.toml  README.md  Rocket.toml  default.nix  package.json  tsconfig.json
src/: App.css  App.tsx  main.rs
src/chat-input/: ChatInput.tsx
src/chat-window/: ChatWindow.tsx  chatwindow.css
src/message-bubble/: MessageBubble.css
src/message-container/: MessageContainer.tsx
src/message-store/: MessageStore.ts
src/navbar/: MyNavbar.tsx
www/: .env.development  .env.production  README.md  package.json  tslint.json
www/public/: index.html  manifest.json
www/src/: App.css  App.tsx  index.tsx
www/src/add-user-modal-and-button/: AddUserModalAndButton.css  AddUserModalAndButton.tsx
www/src/chat-input/: ChatInput.css  ChatInput.tsx
www/src/chat-window/: ChatWindow.tsx  chatwindow.css
www/src/datatypes/: message.ts
www/src/edit-message-modal-and-button/: EditMessageModalAndButton.css  EditMessageModalAndButton.tsx
www/src/info/: Info.css  Info.tsx
www/src/message-bubble/: MessageBubble.css  MessageBubble.tsx
www/src/message-container/: MessageContainer.css  MessageContainer.tsx
www/src/navbar/: MyNavbar.css  MyNavbar.tsx
www/src/networking/: fetchText.ts
www/src/side-nav/: SideNav.css  SideNav.tsx
www/src/speech/: speech.ts
